<resources>
    <string name="app_name">tute4</string>
    <string name="Number1">Number1</string>
    <string name="Number01">Number01</string>
    <string name="Number2">number02\n</string>
    <string name="Number02">Number02</string>
    <string name="Number">Edit number</string>

    <string name="label_Number1">Number 01</string>
    <string name="label_Number2">Number 02</string>
    <string name="edt_Number1">23</string>
    <string name="edt_Number2">12</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Multiply">x</string>
    <string name="btn_Divide">/</string>
    <string name="Answer">Answer\n</string>
    <string name="TextView">textView</string>
    <string name="BACK">BACK</string>
    <string name="Button1">+</string>
    <string name="button2">-</string>
    <string name="button3">X</string>
    <string name="button4">/</string>
    <string name="text1">EduNest offers expert-led courses, interactive lessons, and certifications to help you grow.</string>
    <string name="text2">EduNest offers expert-led courses, interactive lessons, and certifications to help you grow.</string>
    <string name="text3">EduNest offers expert-led courses, interactive lessons, and certifications to help you grow.</string>
    <string name="text4">EduNest offers expert-led courses, interactive lessons, and certifications to help you grow.</string>
    <string name="b1">See All</string>
    <string name="b2">UX/UI Design</string>
    <string name="b3">App Design</string>
    <string name="b4">Website Design</string>
    <string name="b5">MobileApp</string>
    <string name="b6">OverView</string>
    <string name="b7">Lessons\n</string>
    <string name="b8">Reviews\n</string>
    <string name="price">LKR2400</string>
    <string name="t1">Mobile App UI UX</string>
    <string name="t2">Review Rate</string>
    <string name="t3">I (User Interface) is about the look and feel, including colors, typography, and layouts. UX (User Experience) is about functionality, ensuring smooth navigation and user satisfaction.</string>
    <string name="t5">100+ Lesson</string>
    <string name="t6">5 Weeks</string>
    <string name="t7">Certificate</string>
    <string name="t8">20% off</string>
    <string name="t9">Skills</string>
    <string name="b10">UI/UX</string>
    <string name="b12">Website Design</string>
    <string name="b11">Figma</string>
    <string name="b13">Mobile app</string>
    <string name="b14">GET ENROLL</string>
    <string name="t10">Learn anytime, anywhere</string>
    <string name="t11">Gain new skills easily</string>
    <string name="t12">Access quality courses</string>
    <string name="t13">Improve knowledge effectively</string>
    <string name="ba1" />
    <string name="ba2">Lesson 1:What is UI/UX</string>
    <string name="ba3">Lesson 2:App Design Process</string>
    <string name="ba4">Lesson 2:App Design process</string>
    <string name="ba5">Lesson 2:App Design process</string>
    <string name="ba6">Lesson 3:App Design process</string>
    <string name="ba7">Lesson 4:App Design process</string>
    <string name="ba8">Lesson 5:App Design process</string>
    <string name="ba9">Lesson 6:App Design process</string>
    <string name="t14">Flexible Learning: Study anytime, anywhere at your own pace. Gain knowledge without time restrictions.</string>
    <string name="t15">Expert Guidance: Learn from top instructors with real-world experience. Get quality education from professionals.</string>
    <string name="t16">Skill Development: Enhance your abilities with practical courses. Improve career prospects with new skills</string>
    <string name="t20">Setting</string>
    <string name="t21">Notification</string>
    <string name="t22">Profile</string>
    <string name="t23">SHANCHIKA S</string>
    <string name="t24">About Me</string>
    <string name="t25">My Skills\n</string>
    <string name="t27">My Course</string>
    <string name="t28">Website Design</string>
    <string name="t29">App Design</string>
    <string name="t30">see all</string>
    <string name="t32">PAYMENT SUCESSFUL\n</string>
    <string name="t34">Transaction Completed</string>
    <string name="t40">Continue To Lessons</string>
    <string name="t43">Learn anytime with flexible courses and expert guidance.\nImprove skills and knowledge at your own pace effortlessly.</string>
    <string name="t41">Welcome To App\n</string>
    <string name="s1">SIGN IN</string>
    <string name="s2">SIGN UP</string>
    <string name="s3">Learn anytime with flexible courses and expert guidance.\nImprove skills and knowledge at your own pace effortlessly.</string>
    <string name="a1">Name</string>
    <string name="a2">SHANCHIKS S</string>
    <string name="a5">E-Mail</string>
    <string name="a6">abcd@gmail.com</string>
    <string name="a7">Password\n</string>
    <string name="password">.......\n</string>
    <string name="conform">Conform Password\n\n</string>
    <string name="s8">SignUp</string>
    <string name="s9">----OR------</string>
    <string name="w1">Forget Password</string>
    <string name="w2">Password</string>
    <string name="w3">Conform Password</string>
    <string name="b23">Submit</string>
    <string name="w5">Welcome SHANCHIKA</string>
    <string name="w7">UI/UX</string>
    <string name="w8">Figma</string>
    <string name="w90">WebDesign</string>
    <string name="w98">Courses</string>
    <string name="w97">My Courses</string>
    <string name="g3">Get Start</string>
    <string name="d4">Expand Horizons</string>
    <string name="de4">Learn anytime with flexible courses and expert guidance.\nImprove skills and knowledge at your own pace effortlessly.</string>
    <string name="f5">Continue</string>
    <string name="dr6">Skip</string>
    <string name="f55">Learn anytime with flexible courses and expert guidance.\nImprove skills and knowledge at your own pace effortlessly.</string>
    <string name="er5">Learn anytime with flexible courses.</string>
    <string name="r5">Continue</string>
    <string name="rty5">Skip</string>
    <string name="wer">Gain new skills from expert instructors.</string>
    <string name="fte6">Learn anytime with flexible courses and expert guidance.\nImprove skills and knowledge at your own pace effortlessly.</string>
    <string name="sw4">Continue</string>
    <string name="er4">Skip</string>
    <string name="tyr">Skip</string>
    <string name="Sign">SignIn</string>
    <string name="eed">Sign in via email, Google, or social accounts. Choose what works best for you.</string>
    <string name="er3">------------OR---------</string>
    <string name="fef">---------------OR-----------------</string>
    <string name="wqwed">-------------------OR--------------------</string>
    <string name="rgsrg">Already haven\'t Account?</string>
    <string name="grfr">Sign Up</string>
    <string name="rty">Sign In with Google</string>
    <string name="tyuio">sign In with Facebook</string>
    <string name="rtyui">Sign In</string>
    <string name="dfg">Forget password?</string>
    <string name="wert">E-mail</string>
    <string name="fdag">abcd@gmail.com</string>
    <string name="pass">password</string>
    <string name="gh">SignUp</string>
    <string name="sdfg">Skip</string>
    <string name="ewrw">Shanchika is a passionate IT student at SLIIT, specializing in software development. Currently working on MERN stack projects, including a homemade food delivery app and a floral shop management system. Skilled in Agile methodology and UI/UX design, with experience in Figma. Always eager to learn, innovate, and create impactful digital solutions.</string>
    <string name="ffsdf">Add Details</string>
    <string name="feqrf">Overview</string>
    <string name="Name">Name Of Lesson :</string>
    <string name="sfg">Mobile App UI/UX</string>
    <string name="fa">150 + Lessons</string>
    <string name="rgfw">Certificate</string>
    <string name="wfw">5 Weeks</string>
    <string name="ergr">20% off</string>
    <string name="adcasd">Course Rating</string>
    <string name="gwrf">CourseTime:</string>
    <string name="rQR">CourseTime:   10 hrs</string>
    <string name="fwdf">Name Of Trainer: S.Jeyapragash</string>
    <string name="trgf">Purchase Details:</string>
    <string name="gre">Date:24.03.2025</string>
    <string name="tretgfwa">Cupon :Added 20% Discount</string>
    <string name="hgfd">Price of course: LKR 2400</string>
    <string name="fefwsd">Continiue</string>
    <string name="wdd">password</string>
    <string name="Card">Card Number</string>
    <string name="dss">CVV Number</string>
    <string name="ffew">Expiry Date</string>
    <string name="wsdf">Password</string>
    <string name="qawsed">Final Price</string>
    <string name="asdfg">LKR 2000</string>
    <string name="cvbh">Pay</string>
</resources>