<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView96"
        android:layout_width="199dp"
        android:layout_height="221dp"
        app:srcCompat="@drawable/image6"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="29dp" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/grttr"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="222dp" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t22"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="36dp" />

    <ImageView
        android:id="@+id/imageView95"
        android:layout_width="38dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/arr"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t24"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="268dp" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="359dp"
        android:layout_height="130dp"
        android:text="@string/ewrw"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t30"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="593dp" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t25"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t23"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="222dp" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t27"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="593dp" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t28"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="831dp" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t29"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="824dp" />

    <ImageView
        android:id="@+id/imageView98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/a"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="643dp" />

    <ImageView
        android:id="@+id/imageView99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/t"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="643dp" />

    <LinearLayout
        android:layout_width="303dp"
        android:layout_height="33dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="490dp">

        <TextView
            android:id="@+id/textView68"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#CFE1EF"
            android:text="@string/b10" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ABA7A7"
            android:text="@string/b12" />

        <TextView
            android:id="@+id/textView70"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:background="#ACCCE6"
            android:text="@string/b5" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:background="#ABA7A7"
            android:text="@string/b11" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>