<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="468dp"
        android:layout_height="203dp"
        app:srcCompat="@drawable/v"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="137dp"
        android:layout_height="24dp"
        android:background="#A1BADB"
        android:text="@string/t1"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="301dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="339dp" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="319dp"
        android:layout_height="162dp"
        app:srcCompat="@drawable/u"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="488dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="137dp"
        android:layout_height="25dp"
        android:text="@string/t5"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="517dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="27dp"
        android:layout_height="21dp"
        app:srcCompat="@drawable/image10"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="554dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t7"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="582dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="27dp"
        android:layout_height="21dp"
        app:srcCompat="@drawable/image13"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="582dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t6"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="553dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="24dp"
        android:layout_height="27dp"
        app:srcCompat="@drawable/book"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="515dp" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="21dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/q"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="612dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t8"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="612dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t9"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="667dp" />

    <Button
        android:id="@+id/button26"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:text="@string/b14"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="792dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="81dp"
        android:layout_height="27dp"
        android:text="@string/price"
        tools:layout_editor_absoluteX="314dp"
        tools:layout_editor_absoluteY="301dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/s"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="87dp" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="48dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/sh"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="431dp" />

    <LinearLayout
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="373dp">

        <ImageView
            android:id="@+id/imageView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image9" />

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image9" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image9" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image9" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="237dp">

        <Button
            android:id="@+id/button17"
            android:layout_width="135dp"
            android:layout_height="43dp"
            android:layout_weight="0"
            android:text="@string/b6" />

        <Button
            android:id="@+id/button14"
            android:layout_width="135dp"
            android:layout_height="43dp"
            android:layout_weight="0"
            android:text="@string/b7" />

        <Button
            android:id="@+id/button15"
            android:layout_width="135dp"
            android:layout_height="43dp"
            android:layout_weight="0"
            android:text="@string/b8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="93dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="686dp">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="82dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button22"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b12" />

            <Button
                android:id="@+id/button21"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="203dp"
            android:layout_height="85dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:text="@string/b11" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:text="@string/b13" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="429dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/image17"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="852dp" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="55dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="853dp">

        <ImageView
            android:id="@+id/imageView43"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/x" />

        <ImageView
            android:id="@+id/imageView41"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/image11" />

        <ImageView
            android:id="@+id/imageView42"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/image8" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>