<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="279dp"
        android:layout_height="40dp"
        android:background="#C0CAE0"
        android:text="@string/w5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:text="@string/text3"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w97"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w98"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="168dp"
        android:layout_height="57dp"
        android:text="@string/text1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="194dp"
        android:layout_height="56dp"
        android:text="@string/text4"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:text="@string/text2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="173dp"
        android:layout_height="135dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/r"
        tools:layout_editor_absoluteX="5dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="157dp"
        android:layout_height="131dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:srcCompat="@drawable/a"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="174dp"
        android:layout_height="151dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:layout_constraintVertical_bias="0.777"
        app:srcCompat="@drawable/t"
        tools:layout_editor_absoluteX="232dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="153dp"
        android:layout_height="144dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:srcCompat="@drawable/w"
        tools:layout_editor_absoluteX="252dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="432dp"
        android:layout_height="149dp"
        app:srcCompat="@drawable/image17"
        tools:layout_editor_absoluteX="-17dp"
        tools:layout_editor_absoluteY="808dp" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="326dp"
        android:layout_height="20dp"
        android:background="#BCB5B5"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="71dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="155dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:text="@string/b2"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:text="@string/b3"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        tools:layout_editor_absoluteX="232dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:layout_marginBottom="12dp"
        android:text="@string/b5"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="137dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:text="@string/b4"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        tools:layout_editor_absoluteX="248dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="96dp"
        android:layout_height="35dp"
        android:text="@string/b1"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="155dp" />

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="852dp">

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/x" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/image11" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/image8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="109dp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:background="#B4BFC7"
            android:text="@string/w7"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:background="#B1BBC1"
            android:text="@string/w8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:background="#B9C9CC"
            android:text="@string/w90"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>